Updating Java dependencies